--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "webpack": "^3.12.0"
   },
   "devDependencies": {
-    "axios": "^0.17.1",
+    "axios": ">=3.1.11",
     "babel-preset-stage-2": "^6.24.1",
     "redux-devtools-extension": "^2.13.2",
-    "webpack-dev-server": "^2.11.2"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
